took care of spacing issue at medium sized screen view for popular post images

--- a/styles.css
+++ b/styles.css
@@ -137,6 +137,13 @@ blockquote{
 .row div{
   padding: 0;
 }
+@media (min-width: 768px) and (max-width:1199px){
+  .row div{
+    padding-right: 1em;
+    padding-left: 1em;
+  }
+}
+
 /*.thumbnail:before {
   content: '';
   display: block;
